# conan-rpathlink-issue

./: CMakeLists.txt  conanfile.py
include/: rpathlink.h
src/: rpathlink.c
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.c
